Show information about the SSL errors when clicking on lock icon

If libgcr is available it's used to show the information about the TLS
certificate in the dialog too.

https://bugzilla.gnome.org/show_bug.cgi?id=681506